google ads (?) and flicker fix

--- a/public/css/server.css
+++ b/public/css/server.css
@@ -95,8 +95,9 @@ body.loaded *[loaddata], body:not(.loaded) *:not(input)[placeholder] { opacity: 
     display: block;
     border: none;
     width: 100%;
-    height: var(--ad-height);
     border-radius: 2px;
+    overflow: hidden;
+    background: var(--backpage);
 }
 
 .box {
@@ -267,9 +268,8 @@ h6 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;    
+    width: 100%;
     height: 100%;
-    background-image: var(--cimg);
     background-position: 50% 50%;
     background-size: cover;
     z-index: 5;
